Update CheckoutFrame.java